[project]
name = "hed-tests"
version = "1.0.0"
description = "Official JSON test suite for HED (Hierarchical Event Descriptors) validation across all validator implementations."
readme = "README.md"
authors = [
    { name = "VisLab" },
    { name = "Kay Robbins", email = "Kay.Robbins@utsa.edu" },
]
maintainers = [
    { name = "Kay Robbins", email = "Kay.Robbins@utsa.edu" },
]
license = {text = "MIT"}
keywords = ["HED", "hierarchical event descriptors", "testing", "validation", "test suite", "neuroscience", "BIDS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.10"

# Minimal dependencies - this is a test data repository, not a validator
dependencies = [
    "jsonschema>=4.23.0",
]

[project.urls]
"Homepage" = "https://www.hedtags.org/"
"Documentation" = "https://hed-tests.readthedocs.io/"
"Repository" = "https://github.com/hed-standard/hed-tests/"
"Bug Tracker" = "https://github.com/hed-standard/hed-tests/issues"
"HED Specification" = "https://github.com/hed-standard/hed-specification"
"HED Resources" = "https://www.hedtags.org/hed-resources/"
"Python Validator" = "https://github.com/hed-standard/hed-python"
"JavaScript Validator" = "https://github.com/hed-standard/hed-javascript"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "codespell>=2.2.0",
    "black>=26.1.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]
docs = [
    "sphinx>=7.1.0,<10.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=3.0.0",
    "linkify-it-py>=2.0.3",
]

[tool.codespell]
skip = '*.git,*.pdf,*.svg,venv*,*.tsv,*.yaml,*.yml,*.json,*.rdf,*.jsonld,*.xml,*.mediawiki,*.omn,*.toml'
ignore-words-list = 'te,parms,assertIn'

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 127

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".status",
    "json_test_data",  # Test data, not code
]

[tool.ruff.lint]
# Enable flake8-style checks plus additional rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "N802",   # Function name should be lowercase (many test methods use camelCase)
    "N803",   # Argument name should be lowercase (DataFrame df is common)
    "N806",   # Variable in function should be lowercase (common in scientific code)
    # Style rules that are too opinionated
    "SIM108", # if-else-block-instead-of-if-exp (ternary operator preference)
    "SIM105", # suppressible-exception (use contextlib.suppress)
    "SIM118", # in-dict-keys (x in dict vs x in dict.keys())
    "SIM102", # collapsible-if (nested if statements)
    "SIM103", # needless-bool (return bool vs if/else return True/False)
    "SIM110", # reimplemented-builtin (any/all reimplementation)
    "SIM101", # duplicate-isinstance-call
    # Python 3.10+ features
    "UP007",  # Use X | Y for Union types (requires 3.10+)
    "UP008",  # Use super() without parameters (we're okay with explicit)
    "UP031",  # Use format strings over %-formatting (legacy code compatibility)
    "UP028",  # yield in for loop
    "UP045",  # Use X | None for Optional (requires 3.10+)
]

# Allow unused imports in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# Maximum complexity (matching your flake8 setting)
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["hed"]

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312", "py313"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | \.eggs
  | .*\.egg-info
  | \.status
  | json_test_data
)/
'''
